--- a/css/newYear.css
+++ b/css/newYear.css
@@ -84,7 +84,7 @@ body {
 }
 
 ul>li {
- 
+
     color: #444343;
     font-family: Work Sans;
     font-size: 16px;
@@ -93,8 +93,37 @@ ul>li {
     line-height: 26px;
     list-style: none;
 }
-ul>li>i{
+
+ul>li>i {
     padding-right: 10px;
     color: #005FAC;
     font-weight: 400;
+}
+
+.plans-title-text {
+    margin-top: 70px;
+    color: #151414;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 40px;
+}
+.work-section{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0px 150px;
+    margin-bottom: 100px;
+    text-align: center;
+}
+.work-title{
+    margin-top: 10px;
+    color: #151414;
+    font-size: 30px;
+    font-weight: 700;
+}
+.work-depiction{
+    color: #737272;
+    font-size: 25px;
+    font-weight: 500;
 }
