--- a/css/newYear.css
+++ b/css/newYear.css
@@ -106,24 +106,52 @@ ul>li>i {
     text-align: center;
     font-size: 40px;
     font-weight: 700;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
 }
-.work-section{
+
+.work-section {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 0px 150px;
-    margin-bottom: 100px;
+    margin-bottom: 150px;
     text-align: center;
 }
-.work-title{
+
+.work-title {
     margin-top: 10px;
     color: #151414;
     font-size: 30px;
     font-weight: 700;
 }
-.work-depiction{
+
+.work-depiction {
     color: #737272;
     font-size: 25px;
     font-weight: 500;
+}
+
+.call-section {
+    width: 1140px;
+    height: 300px;
+    background-image: url(../images/gradient1.png), url(../images/watch.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0px auto;
+   
+}
+
+.call-text {
+    color: #FFF;
+    width: 459px;
+    font-size: 40px;
+    font-weight: 700;
+    padding-bottom: 40px;
+}
+.call-content{
+    padding-top: 60px;
+    padding-left: 63px;
+}
+.divisor-150{
+    height: 150px;
 }
